# jp-holidays-for-slack

./: .gitignore  .slugignore  Dockerfile  README.md  app-manifest.yml  app.json  app.py  jp-holidays-workflow.json  pyproject.toml  requirements.txt
app/: app_home.py  app_mention.py  holidays.py  workflow_step.py
