[tool.poetry]
name = "jp-holidays-for-slack"
version = "0.1.0"
description = "Notifying pulic holidays in Japan"
authors = ["Kazuhiro Sera <seratch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.1.0"
pytz = "^2021.3"
slack-bolt = "^1.13.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
